done clean api design homework
